# taproot

./: .gitignore  CMakeLists.txt  README.md  docs.md  examples.md  run.bash  run.sh
docs/: design-choices.md  design.md  interfaces.md  storage.md
include/taproot/: cli.h  client.h  config.h  db.h  log.h  operations.h  query.h  server.h  utils.h
src/: cli.cpp  client.cpp  config.cpp  db.cpp  db.h  log.cpp  log.h  main.cpp  operations.cpp  query.cpp  query.h  server.cpp  utils.cpp  utils.h
tests/: test.cpp
